unpackaged/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log (Outgoing)</label>
    <nameField>
        <label>Integration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Logs (Outgoing)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>