unpackaged/main/default/objects/Integration_Log__c/fields/Audited__c.field-meta.xml
<CustomField>
    <fullName>Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to confirm log has been audited</description>
    <label>Audited</label>
    <type>Checkbox</type>
</CustomField>