unpackaged/main/default/objects/Integration_Log__c/fields/Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>