unpackaged/main/default/objects/Integration_Log__c/fields/fxCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>fxCreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxCreatedDate</label>
    <type>DateTime</type>
</CustomField>