unpackaged/main/default/objects/Integration_Log__c/fields/fxCreatedDateNumeric__c.field-meta.xml
<CustomField>
    <fullName>fxCreatedDateNumeric__c</fullName>
    <formula>CreatedDate - DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxCreatedDateNumeric</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>