unpackaged/main/default/objects/Integration_Log__c/fields/Integration_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Integration_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Transaction</label>
    <referenceTo>Integration_Transaction__c</referenceTo>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>