unpackaged/main/default/objects/Integration_Log__c/fields/Number_of_days_since_created__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_since_created__c</fullName>
    <formula>TODAY () - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days since created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>