unpackaged/main/default/objects/Integration_Log__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>