unpackaged/main/default/objects/Integration_Log__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>