unpackaged/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Level__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Log__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>