unpackaged/main/default/objects/Integration_Log__c/listViews/All_Etech.listView-meta.xml
<ListView>
    <fullName>All_Etech</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Level__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Etech Callout Log</value>
    </filters>
    <label>All Etech</label>
</ListView>