unpackaged/main/default/objects/Integration_Log__c/listViews/All_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>All_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Level__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>All Last 7 Days</label>
</ListView>