unpackaged/main/default/objects/Integration_Log__c/listViews/All_Tekmir_Prod.listView-meta.xml
<ListView>
    <fullName>All_Tekmir_Prod</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Intake__c</columns>
    <columns>Level__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Tekmir</value>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>INFO</value>
    </filters>
    <filters>
        <field>Endpoint__c</field>
        <operation>contains</operation>
        <value>Prod</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>6/17/2025 12:00 AM</value>
    </filters>
    <label>All Tekmir Prod</label>
</ListView>