unpackaged/main/default/objects/Integration_Log__c/listViews/Dropbox_Today.listView-meta.xml
<ListView>
    <fullName>Dropbox_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Level__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Dropbox</value>
    </filters>
    <label>Dropbox Today</label>
</ListView>