unpackaged/main/default/objects/Integration_Log__c/listViews/FileVine_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>FileVine_Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Level__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FV_</value>
    </filters>
    <label>FileVine Last 30 Days</label>
</ListView>