unpackaged/main/default/objects/Integration_Log__c/listViews/SimplyConvert_Today.listView-meta.xml
<ListView>
    <fullName>SimplyConvert_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Level__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SC_</value>
    </filters>
    <label>SimplyConvert Last 7 Days</label>
</ListView>